

  08 Jun 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.14.4.ebuild,
  -lh-sources-3.14.5.ebuild, -lh-sources-3.14.5-r1.ebuild,
  +lh-sources-3.14.6.ebuild:
  Bump to latest linux and genpatches release

*lh-sources-3.14.5-r1 (06 Jun 2014)

  06 Jun 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.14.5-r1.ebuild:
  Bump to latest genpatches release

  03 Jun 2014; Justin Lecher <jlec@gentoo.org> files/README.gentoo:
  Improve formatting of README

*lh-sources-3.14.5 (03 Jun 2014)

  03 Jun 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.14.5.ebuild:
  Bump to latest genpatches and linux release

  02 Jun 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.14.4.ebuild:
  Bump to latest aufs3 release, install additional patches

  26 May 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.14.4.ebuild,
  +files/README.gentoo:
  Bump to latest aufs3 release, install additional patches

  22 May 2014; Justin Lecher <jlec@gentoo.org> Manifest:
  Fix checksums

  18 May 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.14.4.ebuild:
  Bump to latest BFQ

  14 May 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.12.15.ebuild,
  -lh-sources-3.12.16.ebuild, -lh-sources-3.13.5.ebuild,
  -lh-sources-3.13.6.ebuild, -lh-sources-3.13.7.ebuild,
  -lh-sources-3.13.8.ebuild, -lh-sources-3.13.9.ebuild,
  -lh-sources-3.13.10.ebuild, -lh-sources-3.13.11.ebuild,
  -lh-sources-3.14.0.ebuild, -lh-sources-3.14.1.ebuild,
  -lh-sources-3.14.2.ebuild, -lh-sources-3.14.3.ebuild,
  +lh-sources-3.14.4.ebuild:
  Bump to latest aufs3, genpatches and linux release

*lh-sources-3.14.3 (07 May 2014)

  07 May 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.14.3.ebuild:
  Bump to latest genpatches and linux release

  05 May 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.12.15.ebuild,
  -lh-sources-3.13.5.ebuild, -lh-sources-3.13.6.ebuild,
  -lh-sources-3.13.7.ebuild, -lh-sources-3.13.8.ebuild,
  -lh-sources-3.13.9.ebuild, -lh-sources-3.13.10.ebuild,