@@ -1,12 +1,27 @@
 DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r4-3.14.patch1 3345 SHA256 b38ef75273f09324b4a46b881e9b676a28b787803fed486555726b1373e5d419 SHA512 e89fd2d2b1f902c22d174a3c5d7b7b7056cc9d00facca57de1d045cad81d8a02ce6b581c2adb1d3df9c7614fddb58a0a941782b1e4958667a9185a2fbef1b0bf WHIRLPOOL a6cbb60a90f2ca72fd8f7a3154c8b56edbf1593722baed94fe71b9fbe589d4267c49ddfcd006cd6316127dc12756e5dc1f0b1703dc106e1bf6b70158e61dcd2e
+DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r4-3.15.patch1 3338 SHA256 5aaa15493078423f044c89abc6cb2c6c011759812ea139d941b1ff30e9edbed0 SHA512 c44e2f9fe607d1c0a5daae44ee41b33b05bdcfd39349cb76c995a1ff1d55002c33f70c109c66558bd1c4f001507f0f039573ef1bc1eb1497baeb1a4bdf0415c5 WHIRLPOOL 2945a727a73da8fa54eee3b49d3de23857df3964f30489af0375e9da47cc66907b60791f4a5b417d0c7c19e49be7282ef62caf472a76a3c108a1748d303fd954
 DIST 0002-block-introduce-the-BFQ-v7r4-I-O-sched-for-3.14.patch1 207650 SHA256 44bf375b24bc591ffb486f8c6ff65e120de3f9400f34d834d226860c0bc94cd6 SHA512 3e8be83133b4bc4399d1f065f3d8f7a9978016c9ed9945d10acae264fd6b301246f7bfbc93e46e4bd72fef4386614202e1bba10ecb66ad2e6451ee1bba0ce302 WHIRLPOOL 59f37deec5397a23069563a7cb5187dc4e1c7fe1393c34234cef8ceb15fa27108a5466cbd629d46fc9f6f682012c7e22e89246ccd3040b206536d6661913edf4
+DIST 0002-block-introduce-the-BFQ-v7r4-I-O-sched-for-3.15.patch1 207568 SHA256 97f59c6e5ac9879dae8351f21c9ba88e5f631ba12cc5d97b79f630c8f79718d8 SHA512 c92931e6e7af44f9129a8d78c1aba8c2ce5eadc2a87bb75aae810df9bfb2e3df784ef32aa8e5317aca24dc1775c115222611585837ad84cd3ffe34e88151ead4 WHIRLPOOL 20989c33d7f9f507bdd0cf3fd95c4aedffb3d9561efdbae9c384275aa05394b1ebc2eb7e544b49042ea9ed675b68869d4c86f257766430a7b717b89aae708b88
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r4-for-3.14.0.patch1 35996 SHA256 09f3514d2db9ef6ab3e13de9289b1a8952f91391dfa5d07ede7e8c9aeae9a7a0 SHA512 b62f1c765766d77c050cc471abaf6ba25617866f71e6b1c4581d0712bde3eb4c74f4552e7a6045a27f921b76a738a2be76d3bcefd65db39d77e965e3997f6378 WHIRLPOOL 11622b8f068f43cee028b44ff34eca58bcc0a3843c851f30c823067a87faea40e56bb70cbc6616c7399775d6230c5583728a61dc0c23504f221052678c955bb6
+DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r4-for-3.15.0.patch1 35990 SHA256 f70eb572e90b1ebff0bdb2a34d07c59b811b7669b9f208bbbfff1ce43999e8a9 SHA512 7aae16c37537fc2c128847fce327e8c4e046fb43407302133737d98285eb82f53536dbb8719e789baaa07a55d1fdc34c2fbe622def1d657f5efca334d7e5db1f WHIRLPOOL 998eb82704ab169b6006472cbf6912d9cfbe9eb34ece2cc9a7431ce0944dba004a068468f80758ae51bde6411b01f52460bccb01cfb29093333db6902ed2b718
 DIST README-3.14.6.BFQ 20007 SHA256 7fb4fb92d7af3f90dd31815b6c1f94cd75a1076944262e43a9013302e8ebc222 SHA512 78600cef57d77063b831eb4c8734f069f07b4a828d73e8167b9a50cdeb9113fde4f58ba715e93b0f4d6d2eaa8327cb7155d399c592ee6b4d808d2e6d8199e46f WHIRLPOOL 7f210adec00234e0466a88870eca08ccd618c449c6934fc7dc35e9add712c83a918a3ad76af86b393998f53ebeea1774caada96fe92df904227ab9dd8d0ea50a
+DIST README-3.14.7.BFQ 20007 SHA256 7fb4fb92d7af3f90dd31815b6c1f94cd75a1076944262e43a9013302e8ebc222 SHA512 78600cef57d77063b831eb4c8734f069f07b4a828d73e8167b9a50cdeb9113fde4f58ba715e93b0f4d6d2eaa8327cb7155d399c592ee6b4d808d2e6d8199e46f WHIRLPOOL 7f210adec00234e0466a88870eca08ccd618c449c6934fc7dc35e9add712c83a918a3ad76af86b393998f53ebeea1774caada96fe92df904227ab9dd8d0ea50a
+DIST README-3.15.0.BFQ 20007 SHA256 96d9577fa60c243239d3785cb364124e3da0d87cbd44d95ad07fed5f18abb353 SHA512 7c17a4aff63120e5c857f4cef81f13eee6e2e3c18bf0f0d875e43515d3947cbfe8c232b52e7cd88b53b15c692d0f1fec3b4b9341e6a20aacdef8192b2af0c6d5 WHIRLPOOL 5dced8bf0be752b0ab1e0435bbdeb8f91e6d90fc93c00b1ad6a8b782590ff477b2956c5b1f98428285cca53f2fdeebcd161be628d2dc02d3914aae2e56aa2b38
 DIST aufs-sources-3.14_p20140602.tar.xz 156776 SHA256 b59489f10d6ece7311a8704e4c0006318702a97cf5701f65b21a672dc099e5f1 SHA512 1f4b2f821590f895296a09e67e4ce14ea35d7d9420fbaa813554b9fdbdea1beb8b8bdc50a79c09db95e1f25ff9b5315b1b0dc20af275ff79b6b5d5d6b46d13a1 WHIRLPOOL 4159d518c42941f9e52831cab82f675fbd481b972cacddca6befd865bdafc8fac02931ec7e420889e63e2a880d136d28324300f048281add5664151dec41b641
+DIST aufs-sources-3.14_p20140609.tar.xz 154980 SHA256 26b3f26a30282bab76ccff4b376fa7ff9eab158e06fdce7943d29b1b4e3ad963 SHA512 655c7931a090ee07924c7b3679c74d65d73c33e7a98aa39f31f805d7f989f229f285b5b6ec57c8011b007d70fa8d44fa359e234458b5fac6f4e544158bd344f3 WHIRLPOOL fa2b35d996fa327b18f2557abda06314079b6809c38f83b5c21ed8556d27c871fecb52409438eb5a4e2d0fc25585826afe9d835e7bfd52408af0bb6bf01d1ff3
+DIST aufs-sources-3.15_p20140609.tar.xz 32 SHA256 0040f94d11d0039505328a90b2ff48968db873e9e7967307631bf40ef5679275 SHA512 034b32f1138322638c7a5b7949a3b184c6a4cdfd003360a496c08c56c2cc645c94fbe9cdf9d84c963af6dda6c442717cd61d7e1cecf7024bd463f6f5196c5527 WHIRLPOOL a733257fa33d23180f012d3767e233c598286f7d8b8434a92e769cb99625bbeb5540099b82f228e17a2e6861801f4d4eb4dd73d8524996dc61495bf51bd6a9be
 DIST deblob-3.14 121249 SHA256 980400e0db952ccdb5a507f99444330af893ed0f8a7a052916fcf0c2b2631f7e SHA512 2cbdf4f3947c12ade0931f0b3fb8b9c0312626a3bfea9d1c7d8d1d875b4673624ed3a6369653521998bbea0cde6730b573d6be918d052f1b553e093cb42a838f WHIRLPOOL 7ba1738ac829d8848104843da6237576f235c0151d53944ff3a7e0308cfb91600ffb9253402a34c2ed106c5b0bb3ce36785ead990396465341a957c58319221c
+DIST deblob-3.15 120796 SHA256 d24f4b0548f42e7e83695919008cb75c70f5a7cb9c8a10824ca3c5c51fa62eaf SHA512 7815575001e48569268e60248da2768c6ee81982761420068ce16e6282a9552783595712ae4d937bb62d7e5f33e62b5daab0da35c8bb49c5d94ebde42f030495 WHIRLPOOL 403de2590101bc30408750a7a4eb1bdd6effbc5e2cc5c0615feff34abea649d015e02c4e54ddbb3dc33864c160f516a5e1e526162bdd0176944b382e9a52f425
 DIST deblob-check-3.14 613747 SHA256 e1d5ced14e38fd415eb5a9a50e180cfdc63b2d0f0350a6d36645b82ef0351304 SHA512 f5901a7c41db34ea3c29e6c6f6fa1afacf4edca1cfad901599b982fd66b5ce3894aa9075b5d15b7a8a6c9694833752fb609d98889b5de39ab59aea7d024a740b WHIRLPOOL 5064bf7423a4703a976b4342da5b3cef65584ee701462e261398170b3e5189036327e114deb15a29ded79541dbe084fa86b08b8c293d4585614ac09f791d7f60
+DIST deblob-check-3.15 614485 SHA256 a594a31b5c0a7bc544d2c5158a16d4565de4e45b14f3fc309cfcf91bf46491e2 SHA512 f85e0d9ebf25b37fd9ae765cb2d5767ac475abc72d8b6bb5ed775f03efb216d53cfe1d86bd2945642274cd2c3ddd6ee0ded05019bde7bac71733c96b366cabb7 WHIRLPOOL 8e8e6cdd41313f61a7f9aa4630185f06e785ad951582165d0890596a3e59f8c703a658bf75a36359750eddb9a8b3edb86656860a88dc47b722329aff4cdbb7ef
 DIST genpatches-3.14-10.base.tar.xz 223420 SHA256 c448e67d86f230b20c251cc5780c0ab76cd0c89eb97af9f21e58de45aee8e846 SHA512 addfd00e6418965389f241c3f73ca7b5efbd99ad07afc6b37704182e70d27c9f359f5bb1131d93464c064e8b0961566cff078736e7ed2ae07a05db96cac757fb WHIRLPOOL ca4b3aed9a3a89188ec944488f68dd6f859baf3b96b1186a39c082f07eafb58dc5e3bd8402751277c95ba04e6e5c86f57560a54e5b5a747f2a3c9862c728ff94
 DIST genpatches-3.14-10.extras.tar.xz 18236 SHA256 1c7d96ff22fe4d82aec7f5c323cf983bcfa3e85fb1239df75b5f43d6b85fa8b1 SHA512 bde9ebdb9bc20f342a03c982deb41c2238f779226421ce38facb5db8a61e273f8eff2eeaf46e9f8ce2e7a20f4433731f06bd81cde356ca728928b0e1f7471328 WHIRLPOOL 2d93729afeb219b22dcdc25095641e72efa0e6bdef0fa86b6e396d8046684e2117ef62f58055c310e8281f281d7c84922c8f425b1ced5c86aecc89de78c8fdc7
+DIST genpatches-3.14-11.base.tar.xz 243280 SHA256 a50b27e126ca829ca158f1e6cd9f332ea561f03008bf732193211e824a88b346 SHA512 f9b318c7841aa9965a4f5beadd8e54f3bcf33461deea4c4dff462efe24d1bb114ada2af668b5386afdf9598627650efcd28e7ce109dda3146463f5134cbe84d9 WHIRLPOOL df37604e23b8dbab6372a6d947638c8aa814fc3cbe5f525819d8408d6cfcd405cfa5fa36532bc497d1250dddaf16f34e965c08098ddac49b1632a6bf0731051f
+DIST genpatches-3.14-11.extras.tar.xz 19792 SHA256 82b00796ba91de159efb1d5751a52be7256964bf1b01656bae6fa8795b5fc687 SHA512 a8f82ed3d734d55d41fc8dcfc5dd53ed2fc2b1dfda60037a1381f13d6863b5aadeac12372f341f4fb67a7c7a5be67ebd48d2eb9b5eb4bd864724ad61e32f257b WHIRLPOOL 07b6b9eea1404e543da146bd8c6ccaa5a50fefb688f783972afa2e7eec1a0389e6285dc67304b6c85e92bf99f8ed3615c1aac5d6edf4edb1ac88bec78eb7de71
+DIST genpatches-3.15-2.base.tar.xz 6920 SHA256 491441c9c9436d56122acf9bfe838d78d497fe5fbca7d62572498a42db6a7bb0 SHA512 5fe587992b5f13bd760bc9c22189ba95a183ca0fbd34252c4b146ac44dae84d9ec3b10f5f97c5b118c6f98bf0ebd774d0ba9ab82dd2e9051e3eb848940c91e5a WHIRLPOOL b3f97dfa7e31c250198354f7c85645e2bbf9ef0114e2d40594efb52acd9c3615cc171843a5e4a7eab5f43817ba56df3135918760e72934b81da1a125b2746422
+DIST genpatches-3.15-2.extras.tar.xz 4784 SHA256 35a6577f7d24a16f26c06a8e79a3e9542c9a6858cd8c68975c38a55b0e6fde20 SHA512 51486d8906a068f017e639012277906ebda0404304f4cb2f834d954c31e24ee8a3a762f7088a678723b7feaa2b505a8724f1eda842d914482ad7e02fe6907807 WHIRLPOOL 5f1c148c6b6a5774aa66ae475148703538b19af2ecd8200a9f063aa3270e809d4aad7ecf5abafe8ae802e543e35dfb887c0821dbd52105b6ace961223676030f
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-391b268db43db7e45acdec900adebb2d1545db9f.patch 13917 SHA256 6663d52214c11ad1b76cdbc0e4ba2864747682c56319b5de31f7bb24251a0ebf SHA512 17ff40ac339ce8f0a6cc503859d3480011555688239277e14a80f767515bd8644ac2452fa8e3ca093e4c977f79428197cdf30239816f6bb6bfc27407b3f6c033 WHIRLPOOL cda377a9b8d8fa549d24856b78b9109de4aba6bf8e84b08a2486788ae59f44f715cd3f191b69d8ce4ff536414ca0bf635a4c524d515519710be09388a0327488
+DIST lh-sources-kernel-8883161b98577bd2397dc8616f8e805fb1861be1.patch 15840 SHA256 8154715b3b3c7ebfb614db64afabeb192692e82c73bacdceaad0dc584a07fb8f SHA512 f0acbc5ca8115dbee77437e69ff7de45756ac3ba50bb895681630f4e4722b8cb1b034a2aded5645aac8ae88cb236f864f2d150fa4dea017ffee45ca1d70b9d8c WHIRLPOOL 40977af61d98f5d31695b6f81438ac08dbd07d51663df4d5a078564cdcc7fc9310d9ce97522c43bf0e631d10d2d8d304eb437700cf44799b7b9496675fc4a59e
 DIST linux-3.14.tar.xz 78399152 SHA256 61558aa490855f42b6340d1a1596be47454909629327c49a5e4e10268065dffa SHA512 5730d83a7a81134c1e77c0bf89e42dee4f8251ad56c1ac2be20c59e26fdfaa7bea55f277e7af156b637f22e1584914a46089af85039177cb43485089c74ac26e WHIRLPOOL 5ad07b78c362ba0b21c50b4abb99407cae06bd08576f3fd8f36047b01409eba096263208020da3dcad4977eefc61d66502276754097bc127635df1d7a5817d41
+DIST linux-3.15.tar.xz 79676484 SHA256 c3927e87be4040fa8aca1b58663dc0776aaf00485604ff88a623be2f3fb07794 SHA512 d5dc477cad4584e56e2e2ef9e0950c2b22e76e5cf5090a896ba099cb7c5e5db1853a4aeb96b199189653dc66d461557e95198e37516a619f7ddc01ba6b308e02 WHIRLPOOL 7f3dfde1a23aab75b7f40770ae2ca77c1b28f845e4abe6296b2aec9b56fe94f7afa76b00eb6cc7475305c31b726ebeb4643107dd48c12ac04c933cf1856b8e77
